--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,13 @@
         "src/*"
       ],
     }
-  }
+  },
+  "include": [
+    "types/**/*.ts",
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
