feat(logger): 重构日志系统并添加配置
- 重构了 LoggerService，使用 Winston 日志库
- 在环境文件中添加日志配置
- 更新 AppModule 和 Main 函数以使用新的日志配置
- 删除了未使用的 LogExecution 装饰器

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,9 @@
 # app
-APP_NAME="NESTDOME"
-API_PREFIX="/api"
-APP_PORT=6688
+APP_NAME = "NESTDOME"
+API_PREFIX = "/api"
+APP_PORT = 6688
+
+
+# logger
+LOGGER_LEVEL = "verbose"
+LOGGER_MAX_FILES = '14d'
