--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,8 @@
 # app
-APP_NAME="NESTDOME"
-API_PREFIX="/dev"
-APP_PORT=6688
+APP_NAME = "NESTDOME"
+API_PREFIX = "/dev"
+APP_PORT = 6688
+
+# logger
+LOGGER_LEVEL = "verbose"
+LOGGER_MAX_FILES = '14d'
