chore: 更新代码格式化和拼写检查配置
- 在 .prettierrc 中添加了多个代码格式化选项，以确保代码风格一致性
- 在 .vscode/settings.json 中配置了 cSpell 忽略路径，提高拼写检查效率

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "cSpell.words": [
         "globalenv",
+    ],
+    "cSpell.ignorePaths": [
+        "node_modules/**",
+        "dist/**",
+        "prisma/**",
+        "build/**",
     ]
 }
