--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "printWidth": 120,
+  "arrowParens": "always",
+  "endOfLine": "auto",
+  "bracketSpacing": true,
+  "quoteProps": "as-needed",
+  "embeddedLanguageFormatting": "auto"
 }
