--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "globalenv",
+        "YYYYMMDDHHmmSSS",
     ],
     "cSpell.ignorePaths": [
         "node_modules/**",
