--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,7 @@
 APP_NAME = "NESTDOME"
 API_PREFIX = "/dev"
 APP_PORT = 6688
+APP_RESPONSE = complex # simple | complex
 
 # logger
 LOGGER_LEVEL = "verbose"
