--- a/.env.development
+++ b/.env.development
@@ -1,9 +1,9 @@
 # app
-APP_NAME = "NESTDOME"
-API_PREFIX = "/dev"
-APP_PORT = 6688
-APP_RESPONSE = complex # simple | complex
+APP_NAME = NESTDOME     # 程序名称
+API_PREFIX = /dev       # api 前缀
+APP_PORT = 6688         # 程序端口
+APP_RES_MODE = complex  # 返回数据响应格式 simple | complex
 
 # logger
-LOGGER_LEVEL = "verbose"
-LOGGER_MAX_FILES = '14d'
+LOGGER_LEVEL = verbose"
+LOGGER_MAX_FILES = 14d
