--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,10 @@
 # app
-APP_NAME = "NESTDOME"
-API_PREFIX = "/api"
-APP_PORT = 6688
-APP_RESPONSE = simple # simple | complex
+APP_NAME = NESTDOME     # 程序名称
+API_PREFIX = "/api"     # api 前缀
+APP_PORT = 6688         # 程序端口
+APP_RES_MODE = simple   # 返回数据响应格式 simple | complex
 
 
 # logger
-LOGGER_LEVEL = "verbose"
-LOGGER_MAX_FILES = '14d'
+LOGGER_LEVEL = verbose
+LOGGER_MAX_FILES = 14d
