--- a/.env.development
+++ b/.env.development
@@ -5,5 +5,5 @@ APP_PORT = 6688         # 程序端口
 APP_RES_MODE = complex  # 返回数据响应格式 simple | complex
 
 # logger
-LOGGER_LEVEL = verbose"
+LOGGER_LEVEL = verbose
 LOGGER_MAX_FILES = 14d
