--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,8 @@ APP_RES_MODE = complex  # 返回数据响应格式 simple | complex
 # logger
 LOGGER_LEVEL = verbose
 LOGGER_MAX_FILES = 14d
+
+# file
+UPLOAD_MAX_FILE_SIZE = 10                # 单个文件最大大小（MB）
+UPLOAD_MAX_FIELDS = 5                    # 最大非文件字段数量
+UPLOAD_MAX_FILES = 5                     # 单次请求最大文件数量
