feat: 更新项目配置和依赖
- 更新数据库配置，将DATABASE_URL拆分为独立的DB_HOST、DB_PORT、
  DB_DATABASE、DB_USERNAME和DB_PASSWORD环境变量
- 在.gitignore中添加/generated/prisma目录忽略
- 将Node.js版本从20.14.0更新到22.20.0
- 配置VSCode设置，为Prisma文件添加默认格式化器
- 更新Prisma相关依赖到7.2.0版本
- 添加dotenv依赖用于环境变量管理

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "baseUrl": "./",
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "paths": {
       "@/*": [
         "src/*"
