--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 # 有关更多细节，请参阅文档: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-# DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE"
-DATABASE_URL="mysql://root:123456@localhost:3306/nest"
+
+# db
+DB_HOST = 127.0.0.1
+DB_PORT = 3306
+DB_DATABASE = nest_admin
+DB_USERNAME = root
+DB_PASSWORD = 123456
