--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-fastify": "^11.1.10",
     "@nestjs/throttler": "^6.5.0",
-    "@prisma/client": "^6.15.0",
+    "@prisma/adapter-mariadb": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "dayjs": "^1.11.19",
+    "dotenv": "^17.2.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "winston": "^3.19.0",
@@ -50,7 +52,7 @@
     "eslint": "^9.39.2",
     "jest": "^30.1.3",
     "prettier": "^3.7.4",
-    "prisma": "^6.15.0",
+    "prisma": "^7.2.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
