--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,7 @@
     "*.env": "$(capture).env.*",
     "README.md": "README*,CHANGELOG*,LICENSE,CNAME",
     "package.json": "pnpm-lock.yaml,pnpm-workspace.yaml,.gitignore,.npmrc,.node-version,.git*",
-    "eslint.config.mjs": ".eslintignore,.prettierignore,.prettierrc,.editorconfig",
+    "eslint.config.mjs": ".eslintignore,.prettierignore,.prettierrc,.editorconfig,nest-cli.json",
     "tailwind.config.mjs": "postcss.*"
   }
 }
