--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "db:generate": "npx prisma generate",
     "clean": "node ./scripts/clean.mjs",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "format": "prettier --write \"src/**/*.{ts,js}\" \"test/**/*.{ts,js}\"",
+    "format": "prettier --write \"src/**/*.{ts,js}\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
