chore(vscode): 更新文件关联配置
在 .vscode/settings.json 中更新了 eslint.config.mjs 的文件关联规则，
添加了 ecosystem.config.js 文件到相关文件列表中，以便更好地管理项目配置文件。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,7 @@
     "*.env": "$(capture).env.*",
     "README.md": "README*,CHANGELOG*,LICENSE,CNAME",
     "package.json": "pnpm-lock.yaml,pnpm-workspace.yaml,.gitignore,.npmrc,.node-version,.git*",
-    "eslint.config.mjs": ".eslintignore,.prettierignore,.prettierrc,.editorconfig,nest-cli.json",
+    "eslint.config.mjs": ".eslintignore,.prettierignore,.prettierrc,.editorconfig,nest-cli.json,ecosystem.config.js",
     "tailwind.config.mjs": "postcss.*"
   }
 }
