feat(logger): 替换winston为pino日志库并更新配置
- 将日志系统从winston替换为pino和pino-http
- 更新环境配置文件中的日志相关参数(LOGGER_LEVEL, LOGGER_DIR, LOGGER_CONSOLE)
- 修改应用配置以支持新的日志选项(日志目录、控制台输出)
- 移除旧的日志依赖包(winston, winston-daily-rotate-file等)
- 添加新的日志实现PinoLogger类
- 在主应用中使用新的pino日志记录器替代原有的CustomLogger

--- a/.env.production
+++ b/.env.production
@@ -5,8 +5,9 @@ APP_PORT = 8848         # 程序端口
 APP_RES_MODE = simple   # 返回数据响应格式 simple | complex
 
 # logger
-LOGGER_LEVEL = verbose
-LOGGER_MAX_FILES = 14d
+LOGGER_LEVEL = debug      # 日志等级
+LOGGER_DIR = logs         # 日志目录
+LOGGER_CONSOLE = false    # 是否输出到控制台
 
 # file
 UPLOAD_MAX_FILE_SIZE = 10                # 单个文件最大大小（MB）
