--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "class-validator": "^0.14.3",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
+    "pino": "^10.3.0",
+    "pino-http": "^11.0.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "winston": "^3.19.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^7.2.0",
