fix(build): 修正生产环境启动脚本路径
修改了 package.json 中 start:prod 脚本的入口文件路径，
从 dist/main 改为 dist/src/main 以匹配实际构建输出结构。

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "NODE_ENV=development nest start",
     "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_ENV=production node dist/main",
+    "start:prod": "NODE_ENV=production node dist/src/main",
     "db:migrate": "pnpm dlx prisma migrate dev --name init",
     "db:generate": "pnpm dlx prisma generate",
     "clean": "node ./scripts/clean.mjs",
