docs(env): 添加环境配置文件中的注释说明
为开发和生产环境的 swagger 配置项添加中文注释说明，
提高配置文件的可读性和维护性。

--- a/.env.development
+++ b/.env.development
@@ -14,9 +14,7 @@ UPLOAD_MAX_FILE_SIZE = 10                # 单个文件最大大小（MB）
 UPLOAD_MAX_FIELDS = 5                    # 最大非文件字段数量
 UPLOAD_MAX_FILES = 5                     # 单次请求最大文件数量
 
-
-
 # swagger
-SWAGGER_ENABLE = true
-SWAGGER_PATH = api-docs
-SWAGGER_VERSION = 1.0
+SWAGGER_ENABLE = true            # 是否启用 swagger
+SWAGGER_PATH = api-docs          # swagger 文档路径
+SWAGGER_VERSION = 1.0            # swagger 文档版本
